--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,6 @@ executors:
   golang:
     docker:
       - image: circleci/golang:1.13
-    resource_class: small
 
 commands:
   install-deps:
@@ -77,6 +76,7 @@ jobs:
             make test-coverage
             mkdir -p /tmp/artifacts
             mv coverage.out /tmp/artifacts/coverage.out
+            make test-migration
       - codecov/upload:
           file: /tmp/artifacts/coverage.out
       - store_artifacts:
